Display customer`s birthdate on their profile page

--- a/WebApplication1/Views/Customers/Index.cshtml
+++ b/WebApplication1/Views/Customers/Index.cshtml
@@ -16,6 +16,7 @@ else
             <tr>
                 <th>Customer</th>
                 <th>Discount Rate</th>
+                <th>Membership Type</th>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +26,7 @@ else
                 
                 <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
                 <td>@customer.MembershipType.DiscountRate%</td>
+                <td>@customer.MembershipType.Name</td>
             </tr>
             }
         </tbody>
