--- a/WebApplication1/Views/Customers/Details.cshtml
+++ b/WebApplication1/Views/Customers/Details.cshtml
@@ -6,3 +6,11 @@
 
 <h1>@Model.Name</h1>
 
+<ul>
+    <li>Membership Type: @Model.MembershipType.Name</li>
+    @if (Model.Birthdate.HasValue)
+    {
+        <li>Birthdate: @Model.Birthdate.Value.ToShortDateString()</li>
+    }
+
+</ul>
