--- a/WebApplication1/Views/Customers/Index.cshtml
+++ b/WebApplication1/Views/Customers/Index.cshtml
@@ -4,32 +4,62 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Customers</h1>
-@if (!Model.Any())
-{
-    <p>We dont have any customers</p>
-}
-else
-{
-    <table class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th>Customer</th>
-                <th>Discount Rate</th>
-                <th>Membership Type</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var customer in Model)
-            {
-            <tr>
-                
-                <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
-                <td>@customer.MembershipType.DiscountRate%</td>
-                <td>@customer.MembershipType.Name</td>
-            </tr>
-            }
-        </tbody>
-    </table>
-}
 
+<div class="container row p-0 m-0">
+    <div class="col-6">
+        <h2 class="text-info">Customers</h2>
+    </div>
+    <div class="col-3 offset-3">
+        <a asp-action="New" asp-controller="Customers" class="btn btn-info form-control text-white">
+            Add New Customer
+        </a>
+    </div>
+
+    @if (!Model.Any())
+    {
+        <p>We dont have any customers</p>
+    }
+    else
+    {
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>Customer</th>
+                    <th>Discount Rate</th>
+                    <th>Membership Type</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var customer in Model)
+                {
+                    <tr>
+                        <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
+                        <td>@customer.MembershipType.DiscountRate%</td>
+                        <td>@customer.MembershipType.Name</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+
+
+    <div class="col-12 border p-3">
+        <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Discount Rate</th>
+                    <th>Membership Type</th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+</div>
+
+
+
+
+@section Scripts
+{
+    <script src="~/js/bookList.js"></script>
+}
