--- a/WebApplication1/Views/Movies/Index.cshtml
+++ b/WebApplication1/Views/Movies/Index.cshtml
@@ -4,21 +4,41 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-<table class="table table-bordered table-hover">
-    <thead>
-        <tr>
-            <th>Movie</th>
-            <th>Genre</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var movie in Model)
-        {
-            <tr>
-                <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
-                <td>@movie.Genre.Name</td>
-            </tr>
-        }
-    </tbody>
-</table>
+
+<div class="container row p-0 m-0">
+    <div class="col-6 mb-2" >
+        <h2 class="text-info">Customers</h2>
+    </div>
+    <div class="col-3 offset-3">
+        <a asp-action="New" asp-controller="Movies" class="btn btn-info form-control text-white">
+            Add New Movie
+        </a>
+    </div>
+
+    @if (!Model.Any())
+    {
+        <p>We dont have any movie</p>
+    }
+    else
+    {
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>Movie</th>
+                    <th>Genre</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var movie in Model)
+                {
+                <tr>
+                    <td><a href='/Movies/Edit/@movie.Id' style='cursor:pointer;width:70px'>@movie.Name</a></td>
+                    <td>@movie.Genre.Name</td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    }
+</div>
+
+
