--- a/WebApplication1/Views/Movies/MovieForm.cshtml
+++ b/WebApplication1/Views/Movies/MovieForm.cshtml
@@ -1,47 +1,48 @@
-﻿@model WebApplication1.ViewModels.CustomerFormViewModel
+﻿@model WebApplication1.ViewModels.MovieFormViewModel
 @{
     ViewData["Title"] = "New";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <br />
-<h2 class="text-info">@(Model.Customer.Id == 0 ? "Create": "Edit") Customer</h2>
+<h2 class="text-info">@(Model.Movie.Id == 0 ? "Create": "Edit") Movie</h2>
 <br />
 
 
-<div class="border container" style="padding:30px;width:70%">
+<div class="border" style="padding:30px;width:70%">
     <form asp-action="Save" method="post">
-        @if (Model.Customer.Id != 0)
+        @if (Model.Movie.Id != 0)
         {
-            <input type="hidden" asp-for="Customer.Id" />
+            <input type="hidden" asp-for="Movie.Id" />
         }
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <div class="form-group row">
             <div class="col-4">
-                <label asp-for="Customer.Name">Name</label>
+                <label asp-for="Movie.Name">Name</label>
             </div>
             <div class="col-8">
-                <input asp-for="Customer.Name" class="form-control" />
-                <span asp-validation-for="Customer.Name" class="text-danger"></span>
+                <input asp-for="Movie.Name" class="form-control" />
+                <span asp-validation-for="Movie.Name" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
             <div class="col-4">
-                <label asp-for="Customer.Birthdate">Date of Birth</label>
+                <label asp-for="Movie.ReleaseDate">Release Date</label>
             </div>
             <div class="col-8">
-                <input asp-for="Customer.Birthdate" class="form-control" />
-                <span asp-validation-for="Customer.Birthdate" class="text-danger"></span>
+                <input asp-for="Movie.ReleaseDate" class="form-control" />
+                <span asp-validation-for="Movie.ReleaseDate" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
             <div class="col-4">
-                <label asp-for="Customer.MembershipTypeId">Membership Type</label>
+                <label asp-for="Movie.GenreId">Genre</label>
             </div>
 
             <div class="col-8">
-                <select style="width:100%;padding:6px" asp-for="Customer.MembershipTypeId"
-                        asp-items="@(new SelectList(Model.MembershipTypes,"Id","Name"))">
+                <select style="width:100%;padding:6px" asp-for="Movie.GenreId"
+                        asp-items="@(new SelectList(Model.Genres,"Id","Name"))">
                     <option>Please select one</option>
                 </select>
             </div>
@@ -49,22 +50,21 @@
 
         <div class="form-group row">
             <div class="col-4">
-                <label asp-for="Customer.IsSubscribedToNewsletter">
-                    Subscribed to Newsletters
-                </label>
+                <label asp-for="Movie.NumberInStock">Number in stock</label>
             </div>
 
-            <div class="col-1">
-                <input asp-for="Customer.IsSubscribedToNewsletter" type="checkbox">
+            <div class="col-8">
+                <input asp-for="Movie.NumberInStock" class="form-control" />
+                <span asp-for="Movie.NumberInStock"></span>
             </div>
         </div>
 
-      
+
 
         <div class="form-group row">
             <div class="col-4 offset-4">
                 <button type="submit" class="btn btn-primary form-control">
-                    @(Model.Customer.Id!=0 ? "Update":"Create")
+                    @(Model.Movie.Id!=0 ? "Update":"Create")
                 </button>
             </div>
             <div class="col-4">
@@ -75,6 +75,8 @@
 
     </form>
 </div>
+
+
 
 
 @section Scripts{
