Add clickable customer on customersView table2 API

--- a/WebApplication1/Views/Customers/CustomerForm.cshtml
+++ b/WebApplication1/Views/Customers/CustomerForm.cshtml
@@ -9,7 +9,7 @@
 <br />
 
 
-<div class="border container" style="padding:30px;width:70%">
+<div class="border" style="padding:30px;width:70%">
     <form asp-action="Save" method="post">
         @if (Model.Customer.Id != 0)
         {
