--- a/WebApplication1/Views/Movies/Details.cshtml
+++ b/WebApplication1/Views/Movies/Details.cshtml
@@ -8,7 +8,7 @@
 <ul>
     @*<li>Genre: @Model.Genre.Name</li>*@
     <li>Genre: @Model.Genre.Name</li>
-    <li>Release Date: @Model.ReleaseDate.ToString("ddd, MMMM M, yyyy")</li>
+    <li>Release Date: @Model.ReleaseDate?.ToString("ddd, MMMM M, yyyy")</li>
     <li>Date Added: @Model.DateAdded.ToString("ddd, MMMM M, yyyy")</li>
     <li>Number in Stock: @Model.NumberInStock</li>
 </ul>
