--- a/WebApplication1/Views/Customers/CustomerForm.cshtml
+++ b/WebApplication1/Views/Customers/CustomerForm.cshtml
@@ -31,7 +31,6 @@
             </div>
             <div class="col-8">
                 <input asp-for="Customer.Birthdate" class="form-control" />
-                <span asp-validation-for="Customer.Birthdate" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
@@ -42,8 +41,9 @@
             <div class="col-8">
                 <select style="width:100%;padding:6px" asp-for="Customer.MembershipTypeId"
                         asp-items="@(new SelectList(Model.MembershipTypes,"Id","Name"))">
-                    <option>Please select one</option>
+                    <option value="">Please select one</option>
                 </select>
+                <span asp-validation-for="Customer.MembershipTypeId" class="text-danger"></span>
             </div>
         </div>
 
