--- a/WebApplication1/Views/Customers/CustomerForm.cshtml
+++ b/WebApplication1/Views/Customers/CustomerForm.cshtml
@@ -30,7 +30,8 @@
                 <label asp-for="Customer.Birthdate">Date of Birth</label>
             </div>
             <div class="col-8">
-                <input asp-for="Customer.Birthdate" class="form-control" />
+                <input asp-for="Customer.Birthdate" class="form-control"/>
+                <span asp-validation-for="Customer.Birthdate" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
@@ -41,10 +42,11 @@
             <div class="col-8">
                 <select style="width:100%;padding:6px" asp-for="Customer.MembershipTypeId"
                         asp-items="@(new SelectList(Model.MembershipTypes,"Id","Name"))">
-                    <option value="">Please select one</option>
+                    <option value="">Select Membership Type</option>
                 </select>
                 <span asp-validation-for="Customer.MembershipTypeId" class="text-danger"></span>
             </div>
+
         </div>
 
         <div class="form-group row">
@@ -58,8 +60,6 @@
                 <input asp-for="Customer.IsSubscribedToNewsletter" type="checkbox">
             </div>
         </div>
-
-      
 
         <div class="form-group row">
             <div class="col-4 offset-4">
