--- a/WebApplication1/Views/Customers/CustomerForm.cshtml
+++ b/WebApplication1/Views/Customers/CustomerForm.cshtml
@@ -15,7 +15,8 @@
         {
             <input type="hidden" asp-for="Customer.Id" />
         }
-        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="text-danger" asp-validation-summary="All"></div>
+
         <div class="form-group row">
             <div class="col-4">
                 <label asp-for="Customer.Name">Name</label>
@@ -23,15 +24,6 @@
             <div class="col-8">
                 <input asp-for="Customer.Name" class="form-control" />
                 <span asp-validation-for="Customer.Name" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-4">
-                <label asp-for="Customer.Birthdate">Date of Birth</label>
-            </div>
-            <div class="col-8">
-                <input asp-for="Customer.Birthdate" class="form-control"/>
-                <span asp-validation-for="Customer.Birthdate" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
@@ -46,8 +38,17 @@
                 </select>
                 <span asp-validation-for="Customer.MembershipTypeId" class="text-danger"></span>
             </div>
-
         </div>
+        <div class="form-group row">
+            <div class="col-4">
+                <label asp-for="Customer.Birthdate">Date of Birth</label>
+            </div>
+            <div class="col-8">
+                <input asp-for="Customer.Birthdate" class="form-control" />
+                <span asp-validation-for="Customer.Birthdate" class="text-danger"></span>
+            </div>
+        </div>
+
 
         <div class="form-group row">
             <div class="col-4">
