--- a/WebApplication1/Views/Movies/MovieForm.cshtml
+++ b/WebApplication1/Views/Movies/MovieForm.cshtml
@@ -16,7 +16,7 @@
         {
             <input type="hidden" asp-for="Movie.Id" />
         }
-        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="text-danger" asp-validation-summary="All"></div>
         <div class="form-group row">
             <div class="col-4">
                 <label asp-for="Movie.Name">Name</label>
@@ -56,12 +56,10 @@
             </div>
 
             <div class="col-8">
-                <input asp-for="Movie.NumberInStock" class="form-control" />
-                <span asp-for="Movie.NumberInStock"></span>
+                <input  asp-for="Movie.NumberInStock" class="form-control" />
+                <span asp-validation-for="Movie.NumberInStock" class="text-danger"></span>
             </div>
         </div>
-
-
 
         <div class="form-group row">
             <div class="col-4 offset-4">
@@ -77,7 +75,6 @@
 
     </form>
 </div>
-
 
 
 
