--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -73,6 +73,10 @@ body {
     line-height: 60px; /* Vertically center the text there */
 }
 
+.validation-summary-errors {
+    color: gray!important;
+}
+
 .input-validation-error {
     border-color: red;
 }
@@ -80,3 +84,5 @@ body {
 .cursor-pointer {
     cursor: pointer;
 }
+
+
